# shared-ui

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
.github/workflows/: ci.yml
_gamebook/: Cargo.toml  index.html
_gamebook/src/: lib.rs  styles.rs
_gamebook/src/games/: leviathan_hunt.rs  mod.rs
_gamebook/src/styles/: _variables.scss  mod.scss
_storybook/: Cargo.toml  Trunk.toml  index.html  style.scss
_storybook/src/: lib.rs
_storybook/src/api/: mod.rs  pfp_city.rs
_storybook/src/stories/: components.rs  flow.rs  helpers.rs  loader.rs  mod.rs  primitives.rs  toast.rs  wallet.rs  welcome.rs
_storybook/src/stories/cardkit/: compact_card.rs  game_card.rs  leviathan_demo.rs  mod.rs
_storybook/src/stories/components/: accordion.rs  alert.rs  asset_cache.rs  asset_card.rs  asset_detail_card.rs  asset_grid.rs  asset_picker.rs  badge.rs  button.rs  button_group.rs  card.rs  color_swatch.rs  connection_status.rs  drop_editor.rs  empty_state.rs  form_group.rs  header.rs  image_card.rs  info_grid.rs  loading_overlay.rs  memory_card.rs  mod.rs  modal.rs  modal_stack.rs  player_card.rs  progress_bar.rs  rating.rs  role_dots.rs  select.rs  skeleton.rs  stat_pill.rs  tabs.rs  text_input.rs  textarea.rs  use_draggable.rs  user_avatar.rs
components/: Cargo.toml
components/src/: asset_card.rs  image_card.rs  lib.rs  memory_card.rs
docs/: cardkit-sample-game.md  leptos-0.6-to-0.8-migration.md  loading-state-ux.md  memory-game-design.md  ui-cardkit-design.md  unified-realtime-protocol.md
launchers/: README.md  macroquad.html
primitives/: Cargo.toml
primitives/src/: component.rs  dom.rs  lib.rs  reactive.rs
scripts/: build-worker.sh
scss-macros/: Cargo.toml
scss-macros/src/: lib.rs
ui-cardkit/: Cargo.toml
ui-cardkit/src/: card_detail_modal.rs  card_hand.rs  compact_card.rs  deployment_summary.rs  deployment_zone.rs  game_card.rs  health_bar.rs  lib.rs  monster_stage.rs  styles.rs
ui-cardkit/src/styles/: _variables.scss  card_detail_modal.scss  card_hand.scss  compact_card.scss  deployment_summary.scss  deployment_zone.scss  game_card.scss  health_bar.scss  mod.scss  monster_stage.scss
ui-components/: Cargo.toml
ui-components/src/: accordion.rs  alert.rs  asset_cache.rs  asset_card.rs  asset_detail_card.rs  asset_grid.rs  asset_modal.rs  asset_picker.rs  badge.rs  button.rs  button_group.rs  card.rs  color_swatch.rs  connection_status.rs  draggable_stack.rs  drop_editor.rs  empty_state.rs  form_group.rs  header.rs  helpers.rs  image_cache.rs  image_card.rs  info_grid.rs  lib.rs  loading_overlay.rs  memory_card.rs  modal.rs  modal_context.rs  modal_stack.rs  pagination.rs  player_card.rs  policy_folder.rs  progress_bar.rs  rating.rs  role_dots.rs  select.rs  skeleton.rs  stat_pill.rs  styles.rs  tabs.rs  (+6 more)
ui-components/src/styles/: _badge.scss  _tabs.scss  _variables.scss  accordion.scss  alert.scss  asset_card.scss  asset_detail_card.scss  asset_grid.scss  asset_modal.scss  asset_picker.scss  badge.scss  button.scss  button_group.scss  card.scss  color_swatch.scss  connection_status.scss  draggable_stack.scss  drop_editor.scss  empty_state.scss  form_group.scss  header.scss  image_card.scss  info_grid.scss  loading_overlay.scss  memory_card.scss  mod.scss  modal.scss  modal_stack.scss  pagination.scss  player_card.scss  policy_folder.scss  progress_bar.scss  rating.scss  role_dots.scss  select.scss  skeleton.scss  stat_pill.scss  tabs.scss  text_input.scss  textarea.scss  (+3 more)
ui-core/: Cargo.toml
ui-core/src/: auth.rs  color.rs  error.rs  fetch_state.rs  http.rs  lib.rs  runtime.rs  token.rs  urls.rs
ui-flow/: Cargo.toml
ui-flow-protocol/: Cargo.toml  README.md
ui-flow-protocol/src/: lib.rs
ui-flow/src/: connection.rs  lib.rs  messages.rs  notify.rs  operation.rs  polling_connection.rs  state.rs  status.rs  transport.rs
ui-flow/src/transport/: quad_net_transport.rs  web_sys_transport.rs
ui-loader/: Cargo.toml
ui-loader-macros/: Cargo.toml
ui-loader-macros/src/: leptos.rs  lib.rs  macroquad.rs  seed.rs  static_widget.rs
ui-loader/src/: identity.rs  lib.rs  web.rs
ui-toast/: Cargo.toml
ui-toast/src/: lib.rs
wallet-core/: Cargo.toml
wallet-core/src/: cip30.rs  error.rs  lib.rs  storage.rs  types.rs
wallet-leptos/: Cargo.toml
wallet-leptos/src/: context.rs  hooks.rs  lib.rs  provider.rs
wallet-pallas/: Cargo.toml
wallet-pallas/src/: address.rs  cip8.rs  error.rs  lib.rs  transaction.rs  value.rs
workers/flow-demo/: Cargo.toml  README.md  wrangler.toml
workers/flow-demo/frontend/: Cargo.toml  index.html  trunk.toml
workers/flow-demo/frontend/src/: lib.rs  memory_app.rs
workers/flow-demo/frontend/src/components/: admin.rs  chat.rs  counter.rs  game_board.rs  game_results.rs  lobby.rs  mod.rs  player_list.rs  presence.rs
workers/flow-demo/frontend/styles/: main.scss
workers/flow-demo/src/: assets.rs  lib.rs  memory_session.rs  session.rs  types.rs
