[workspace]
resolver = "2"
members = [
    "scss-macros",
    "ui-core",
    "wallet-core",
    "primitives",
    "components",
    "_storybook",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/defrag-crypto/shared-ui"

[workspace.dependencies]
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# WASM
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "Window",
    "Document",
    "Element",
    "HtmlElement",
    "Node",
    "NodeList",
    "Text",
    "ShadowRoot",
    "ShadowRootInit",
    "ShadowRootMode",
    "CustomElementRegistry",
    "Event",
    "EventTarget",
    "MouseEvent",
    "InputEvent",
    "HtmlInputElement",
    "Storage",
    "console",
    "DomTokenList",
    "CssStyleDeclaration",
    "CustomEvent",
    "CustomEventInit",
    "FocusEvent",
    "KeyboardEvent",
] }

# Reactive
futures-signals = "0.3"

# Async
futures = "0.3"

# Custom elements
custom-elements = "0.2"

# Error handling
thiserror = "1"

# Internal crates
scss-macros = { path = "scss-macros" }
ui-core = { path = "ui-core" }
wallet-core = { path = "wallet-core" }
primitives = { path = "primitives" }
components = { path = "components" }
