[workspace]
resolver = "2"
members = [
    "scss-macros",
    "ui-core",
    "ui-flow",
    "ui-flow-protocol",
    "ui-loader",
    "ui-toast",
    "wallet-core",
    "primitives",
    "ui-components",
    "_storybook",
    "workers/flow-demo",
    "workers/flow-demo/frontend",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/defrag-crypto/shared-ui"

[workspace.dependencies]
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_repr = "0.1"
rmp-serde = "1.3"

# WASM
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "Window",
    "Document",
    "Element",
    "HtmlElement",
    "Node",
    "NodeList",
    "Text",
    "ShadowRoot",
    "ShadowRootInit",
    "ShadowRootMode",
    "CustomElementRegistry",
    "Event",
    "EventTarget",
    "MouseEvent",
    "InputEvent",
    "HtmlInputElement",
    "Storage",
    "console",
    "DomTokenList",
    "CssStyleDeclaration",
    "CustomEvent",
    "CustomEventInit",
    "FocusEvent",
    "KeyboardEvent",
] }

# Reactive
futures-signals = "0.3"

# Async
futures = "0.3"
gloo-timers = { version = "0.3", features = ["futures"] }

# Logging
tracing = "0.1"

# Custom elements
custom-elements = "0.2"

# Error handling
thiserror = "1"

# Static maps
phf = { version = "0.11", features = ["macros"] }

# HTML templating
maud = "0.26"

# Internal crates
scss-macros = { path = "scss-macros" }
ui-core = { path = "ui-core" }
ui-flow = { path = "ui-flow" }
ui-loader = { path = "ui-loader" }
ui-toast = { path = "ui-toast" }
wallet-core = { path = "wallet-core" }
primitives = { path = "primitives" }
ui-components = { path = "ui-components" }
