[workspace]
resolver = "2"
members = [
    "scss-macros",
    "ui-core",
    "ui-flow",
    "ui-flow-protocol",
    "ui-loader",
    "ui-toast",
    "wallet-core",
    "ui-components",
    "_storybook",
    "workers/flow-demo",
    "workers/flow-demo/frontend",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/defrag-crypto/shared-ui"

[workspace.dependencies]
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_repr = "0.1"
rmp-serde = "1.3"

# WASM
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "Window",
    "Document",
    "Element",
    "HtmlElement",
    "HtmlImageElement",
    "Node",
    "NodeList",
    "Text",
    "ShadowRoot",
    "ShadowRootInit",
    "ShadowRootMode",
    "CustomElementRegistry",
    "Event",
    "EventTarget",
    "MouseEvent",
    "InputEvent",
    "HtmlInputElement",
    "Storage",
    "console",
    "DomTokenList",
    "CssStyleDeclaration",
    "CustomEvent",
    "CustomEventInit",
    "FocusEvent",
    "KeyboardEvent",
] }

# Reactive
futures-signals = "0.3"

# Async
futures = "0.3"
gloo-timers = { version = "0.3", features = ["futures"] }

# Logging
tracing = "0.1"

# shared-crates
asset-intents = { git = "https://github.com/defrag-au/shared-crates", package = "asset-intents", rev = "74d5ad8f0b6ef347cf3da9b325ea6bf1dac75ef9" }
worker_utils = { git = "https://github.com/defrag-au/shared-crates", package = "worker_utils", rev = "74d5ad8f0b6ef347cf3da9b325ea6bf1dac75ef9" }
cardano-assets = { git = "https://github.com/defrag-au/shared-crates", package = "cardano-assets", rev = "74d5ad8f0b6ef347cf3da9b325ea6bf1dac75ef9" }

# Error handling
thiserror = "1"

# RNG (wasm-compatible)
rand = { version = "0.9", features = ["small_rng", "std"] }
getrandom = { version = "0.3", features = ["wasm_js"] }

# Static maps
phf = { version = "0.11", features = ["macros"] }

# HTML templating
maud = "0.26"

[patch."https://github.com/defrag-au/shared-crates"]
asset-intents = { path = "../shared-crates/asset-intents" }
cardano-assets = { path = "../shared-crates/cardano-assets" }
