[package]
name = "shared-ui-gamebook"
version = "0.1.0"
edition = "2021"
publish = false

# DEV ONLY - Game UI testing harness

[dependencies]
# Leptos framework
leptos = { version = "0.8", features = ["csr"] }

# Shared UI crates
ui-components = { path = "../ui-components" }
ui-cardkit = { path = "../ui-cardkit" }
scss-macros = { path = "../scss-macros" }

# Core WASM deps
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1"

# Logging
tracing = "0.1"
tracing-wasm = "0.2"

# Web APIs
web-sys = { version = "0.3", features = [
    "Window",
    "Document",
    "Element",
    "HtmlElement",
    "Location",
] }

[lib]
crate-type = ["cdylib"]
