[package]
name = "primitives"
version.workspace = true
edition.workspace = true

[dependencies]
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
web-sys = { workspace = true }
js-sys = { workspace = true }
futures-signals = { workspace = true }
custom-elements = { workspace = true }
