[package]
name = "ui-cardkit"
version.workspace = true
edition.workspace = true
description = "Card game UI toolkit for Leptos applications"

[dependencies]
# Leptos framework
leptos = { version = "0.8", features = ["csr"] }

# Shared UI components (for AssetCard, Modal, etc.)
ui-components = { path = "../ui-components" }

# Styling
scss-macros = { path = "../scss-macros" }

# WASM bindings
wasm-bindgen = { workspace = true }
web-sys = { workspace = true, features = [
    "Element",
    "HtmlElement",
    "DomRect",
] }

# Utilities
tracing = { workspace = true }
