[package]
name = "ui-components"
version.workspace = true
edition.workspace = true
description = "Reusable Leptos components for Cardano applications"

[dependencies]
# Leptos framework
leptos = { version = "0.8", features = ["csr"] }

# Asset types
asset-intents = { workspace = true }
cardano-assets = { workspace = true }

# Styling
scss-macros = { path = "../scss-macros" }

# WASM bindings
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
web-sys = { workspace = true, features = [
    "Blob",
    "HtmlImageElement",
    "Response",
    "Url",
    "Window",
] }
js-sys = { workspace = true }

# Utilities
phf = { workspace = true }
tracing = { workspace = true }
