[package]
name = "ui-components"
version.workspace = true
edition.workspace = true
description = "Reusable Leptos components for Cardano applications"

[dependencies]
# Leptos framework
leptos = { version = "0.8", features = ["csr"] }

# Asset types
asset-intents = { workspace = true }
cardano-assets = { workspace = true }

# Styling
scss-macros = { path = "../scss-macros" }

# WASM bindings
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
web-sys = { workspace = true, features = [
    "Blob",
    "DataTransfer",
    "DomRect",
    "DragEvent",
    "Element",
    "HtmlElement",
    "HtmlImageElement",
    "Response",
    "Url",
    "Window",
] }
js-sys = { workspace = true }

# Utilities
phf = { workspace = true }
send_wrapper = "0.6"
tracing = { workspace = true }
