[package]
name = "ui-core"
version = "0.1.0"
edition = "2021"
description = "Framework-agnostic UI utilities for WASM widgets"
license = "MIT"

[features]
default = []
dev = []

[dependencies]
# Error handling
thiserror = "1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# HTTP
gloo-net = "0.6"

# JWT decoding
base64 = "0.22"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt"] }
tracing-wasm = "0.2"
console_error_panic_hook = "0.1"

# WASM
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "Window",
    "Location",
    "UrlSearchParams",
] }
