[package]
name = "ui-flow"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Framework-agnostic real-time state synchronization with snapshot + delta pattern"

[dependencies]
# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# WASM
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
js-sys = { workspace = true }
web-sys = { workspace = true, features = [
    "WebSocket",
    "MessageEvent",
    "CloseEvent",
    "ErrorEvent",
    "BinaryType",
] }

# Async
futures = { workspace = true }
gloo-timers = { workspace = true }

# Logging
tracing = { workspace = true }

# Error handling
thiserror = { workspace = true }
