[package]
name = "ui-flow"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Framework-agnostic real-time state synchronization with snapshot + delta pattern"

[features]
default = ["web-sys-transport"]
# Use web-sys WebSocket (standard browser, requires wasm-bindgen)
web-sys-transport = [
    "dep:wasm-bindgen",
    "dep:wasm-bindgen-futures",
    "dep:js-sys",
    "dep:web-sys",
    "dep:gloo-timers",
]
# Macroquad ecosystem support (uses quad-net for WebSocket, miniquad for time)
# This feature avoids all wasm-bindgen dependencies for compatibility with macroquad's gl.js
macroquad = ["dep:quad-net", "dep:miniquad"]

[dependencies]
# Protocol types (new unified protocol)
ui-flow-protocol = { path = "../ui-flow-protocol" }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
rmp-serde = { workspace = true }

# WASM (web-sys transport)
wasm-bindgen = { workspace = true, optional = true }
wasm-bindgen-futures = { workspace = true, optional = true }
js-sys = { workspace = true, optional = true }
web-sys = { workspace = true, optional = true, features = [
    "WebSocket",
    "MessageEvent",
    "CloseEvent",
    "ErrorEvent",
    "BinaryType",
] }
gloo-timers = { workspace = true, optional = true }

# quad-net transport (for macroquad/miniquad)
# Pinned to specific SHA that matches the JS files we're serving
quad-net = { git = "https://github.com/not-fl3/quad-net", rev = "31796d4e", optional = true }
miniquad = { version = "0.4", optional = true }

# Async
futures = { workspace = true }

# Logging
tracing = { workspace = true }

# Error handling
thiserror = { workspace = true }
