[package]
name = "ui-loader"
version = "0.1.0"
edition = "2021"
description = "Framework-agnostic loading orchestrator for WASM widgets"
license = "MIT"

[features]
default = ["web"]
# Enable dev mode features
dev = ["ui-core/dev"]
# Web (wasm-bindgen) localStorage access for Identity
web = []
# Macroquad support (uses quad-storage for localStorage access)
macroquad = ["dep:quad-storage"]

[dependencies]
# Core UI utilities
ui-core = { path = "../ui-core" }

# HTML templating for loading/error screens
maud = { workspace = true }

# Async/timing utilities
gloo-timers = { version = "0.3", features = ["futures"] }
futures = { workspace = true }

# WASM bindings
wasm-bindgen = { workspace = true }
web-sys = { version = "0.3", features = [
    "CssStyleDeclaration",
    "Document",
    "Element",
    "HtmlElement",
    "Window",
] }
js-sys = { workspace = true }

# Logging
tracing = "0.1"
log = "0.4"

# Serialization (for Identity)
serde = { workspace = true }
serde_json = { workspace = true }

# Optional: quad-storage for macroquad localStorage access
quad-storage = { version = "0.1", optional = true }
