[package]
name = "ui-toast"
version = "0.1.0"
edition = "2021"
description = "Framework-agnostic toast notification system for WASM widgets"
license = "MIT"

[dependencies]
# Timing for toast expiry
js-sys = { workspace = true }
gloo-timers = { version = "0.3", features = ["futures"] }

# Futures for async cleanup
futures = { workspace = true }
