[package]
name = "wallet-pallas"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Cardano-aware wallet utilities using pallas for serialization and verification"

[features]
default = []
# Enable WASM support for browser usage
wasm = ["dep:wasm-bindgen", "dep:js-sys"]

[dependencies]
# Core wallet functionality
wallet-core = { path = "../wallet-core" }

# Cardano asset utilities
cardano-assets = { workspace = true }

# Pallas Cardano primitives
pallas-addresses = "1.0.0-alpha.3"
pallas-codec = "1.0.0-alpha.3"
pallas-primitives = "1.0.0-alpha.3"
pallas-crypto = "1.0.0-alpha.3"

# Serialization
serde = { workspace = true }
hex = "0.4"

# Error handling
thiserror = { workspace = true }

# WASM (optional)
wasm-bindgen = { workspace = true, optional = true }
js-sys = { workspace = true, optional = true }
