[package]
name = "flow-demo"
version = "0.1.0"
edition = "2021"
description = "Demo worker showcasing the unified realtime protocol"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Worker runtime
worker = "=0.6.6"
wasm-bindgen = "0.2"
js-sys = "0.3"
console_error_panic_hook = "0.1"

# Protocol types
ui-flow-protocol = { path = "../../ui-flow-protocol" }

# Serialization
serde = { version = "1", features = ["derive"] }
rmp-serde = "1.3"

# Logging
tracing = "0.1"
